--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.16.0",
     "gray-matter": "^4.0.3",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.4.2",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
