--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
       "~/*": ["./src/app/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", 
+    "src/components/landing/TestLanding.tsx", 
+    "src/app/(pages)/index.jsx",
+    "src/components/landing/LandingParallaxBg.tsx"
+  ],
   "exclude": ["node_modules"]
 }
