--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "sass": "^1.66.1"
   }
 }
