--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "~/*": ["./src/app/*"]
+      "~/*": ["./src/app/*"],
+      "$/*": ["./public/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", 
